[stacked tabs] Fix stacking logic with 'open link in new tab'

Currently when in stacked tab mode, using 'open link in
new tab' can result in a stack forming to the left of
the active tab. Prevent this from happening, and also
do not adjust the position of the active tab to the left
unless necessary in order to show all tabs between the
active tab and the newly-opened tab (inclusive).

BUG=737639
TEST=StackedTabStripLayoutTest.AddTab

Review-Url: https://codereview.chromium.org/2963023002
Cr-Commit-Position: refs/heads/master@{#483375}

Former-commit-id: 7aa4e8bf36efda4db554567ffc5b13f14540601e